Fix use of Java 8 api